--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
     crossorigin="" />
   <link href="https://fonts.googleapis.com/css?family=Material+Icons|Karla|Space+Mono&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://unpkg.com/leaflet-geosearch@2.7.0/assets/css/leaflet.css">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <!--
@@ -26,6 +27,7 @@
     -->
   <title>React App</title>
 </head>
+<script src="https://widget.cloudinary.com/v2.0/global/all.js" type="text/javascript"></script>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -40,7 +42,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  <script src='./index.js'></script>
 </body>
 
 </html>
