--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React App</title>
+  <title>Gnomad</title>
 </head>
 <script src="https://widget.cloudinary.com/v2.0/global/all.js" type="text/javascript"></script>
 
